# MARS-Programming-Autonomy

./: .gitignore  .gitmodules  README.md  update.sh
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: beacon-finder.pc  gamepad-state-interpreter.pc  imu_kalman_filter.pc  lidar_kalman_filter.pc  move-cmd-interpreter.pc  path-planner.pc  slam-mapper.pc  talon-srx-driver.pc
launch/: man_ctrl_test.launch
src/beacon-finder/: CMakeLists.txt
src/beacon_finder/: CMakeLists.txt  package.xml
src/beacon_finder/launch/: beacon_finder.launch
src/beacon_finder/src/: camera_info_publisher.py  filter_tara_depth.py  tara_depth_filter.py
src/gamepad-state-interpreter/: CMakeLists.txt
src/gamepad-state-interpreter/msg/: ControllerState.msg
src/gamepad_state_interpreter/: CMakeLists.txt  package.xml
src/imu_kalman_filter/: AccelKalman.py  CMakeLists.txt  Fusion.py  imuKalman.py  imuMsg3.py  listener.py  package.xml  talker.py
src/imu_kalman_filter/msg/: AccelYaw.msg
src/imu_kalman_filter/src/: imuMsg1.py  imuMsg2.py  listener.py
src/lidar_kalman_filter/: CMakeLists.txt  package.xml
src/move-cmd-interpreter/: CMakeLists.txt
src/move_cmd_interpreter/: CMakeLists.txt  package.xml
src/move_cmd_interpreter/src/: vel_to_serial.cpp  vel_to_serial.py
src/path-planner/: CMakeLists.txt
src/rover_autonomy/: CMakeLists.txt  package.xml
src/slam-mapper/: CMakeLists.txt  package.xml
src/talon-srx-driver/: CMakeLists.txt  package.xml
src/velocity-controller/: CMakeLists.txt  package.xml
src/xbox_controller_driver/: CMakeLists.txt  package.xml
(+16 files in other folders)
